--- a/views/layouts/profile.hbs
+++ b/views/layouts/profile.hbs
@@ -91,5 +91,6 @@
           $(':radio').radiocheck();
         })
       </script>
+      <script src="/js/application.js"></script>
   </body>
 </html>
