--- a/views/partials/socialSignUp.hbs
+++ b/views/partials/socialSignUp.hbs
@@ -1,8 +1,14 @@
 <div class="login-form">
-  <a href="/auth/twitter" class="btn btn-block btn-lg btn-info">Join With Twitter</a>
-  <a href="/auth/facebook" class="btn btn-block btn-lg btn-primary">Join With Facebook</a>
 
   <div class="login-form">
+
+    <div class="form-group">
+      <a href="/auth/twitter" class="btn btn-block btn-lg btn-info" style="width: 100%">Join With Twitter</a>
+    </div>
+
+    <div class="form-group">
+      <a href="/auth/facebook" class="btn btn-block btn-lg btn-primary" style="width: 100%">Join With Facebook</a>
+    </div>
     <form action="/auth/local/signup" method="POST">
       <div class="form-group">
         <input type="text" name="email" class="form-control login-field" value="" placeholder="Enter your email" id="login-name" />
