--- a/views/form.hbs
+++ b/views/form.hbs
@@ -1,4 +1,5 @@
 <div class="col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 main profile">
+  {{> flash}}
 
   <div class="row page-header">
     <img src="{{user.profile.picture}}" class="profile-pic" alt="{{user.profile.displayName}} | Pizzafy" />  
