--- a/public/css/custom-home.css
+++ b/public/css/custom-home.css
@@ -38,9 +38,6 @@ body {
 	.wrapper {
 		height: 100vh;
 	}
-	body {
-		overflow-y: hidden;
-	}
 }
 
 .centered {
@@ -89,6 +86,11 @@ h4 {
 }
 .social-btn:first-of-type {
 	margin-right: 2%;
+}
+
+#startupbus_banner {
+  background: white;
+  text-align: center;
 }
 
 @media (max-width:1080px) {
