--- a/views/partials/socialSignUp.hbs
+++ b/views/partials/socialSignUp.hbs
@@ -2,9 +2,9 @@
 
   <div class="login-form">
 
-    <div class="form-group">
-      <a href="/auth/twitter" class="btn btn-block btn-lg btn-info" style="width: 100%">Join With Twitter</a>
-    </div>
+    <!-- <div class="form-group"> -->
+      <!-- <a href="/auth/twitter" class="btn btn-block btn-lg btn-info" style="width: 100%">Join With Twitter</a> -->
+    <!-- </div> -->
 
     <div class="form-group">
       <a href="/auth/facebook" class="btn btn-block btn-lg btn-primary" style="width: 100%">Join With Facebook</a>
