--- a/views/form.hbs
+++ b/views/form.hbs
@@ -16,6 +16,24 @@
     <input type="hidden" name="_csrf" value="{{_csrf}}">
     <h3>Basics</h3>
     <p>Tell us a little more about you, so we can better optimize your pizza experience!</p>
+
+    <div class="first-name row">
+        <div class="control-group">
+          <label class="control-label group-title" for="hates">First Name</label>
+          <div class="controls">
+            <input id="" name="" type="text" placeholder="" class="input-xlarge">
+          </div>
+        </div>
+      </div>
+      <div class="last-name row">
+        <div class="control-group">
+          <label class="control-label group-title" for="hates">Last Name</label>
+          <div class="controls">
+            <input id="" name="" type="text" placeholder="" class="input-xlarge">
+          </div>
+        </div>
+      </div>
+
     <fieldset>
       <h3>Pizza Number</h3>
       <p>How many slices of pizza do you eat at the typical pizza party?</p>
