--- a/views/socialLogIn.hbs
+++ b/views/socialLogIn.hbs
@@ -1,8 +1,11 @@
 <div class="login-form">
-  <a href="/auth/twitter" class="btn btn-block btn-lg btn-info">Join With Twitter</a>
-  <a href="/auth/facebook" class="btn btn-block btn-lg btn-primary">Join With Facebook</a>
+  <!-- <a href="/auth/twitter" class="btn btn-block btn-lg btn-info">Join With Twitter</a> -->
 
   <div class="login-form">
+    <div class="form-group">
+      <a href="/auth/facebook" class="btn btn-block btn-lg btn-primary" style="width: 100%">Login With Facebook</a>
+    </div>
+
     <form action="/auth/local/login" method="POST">
       <div class="form-group">
         <input type="email" name="email" class="form-control login-field" value="" placeholder="Enter your email" id="login-name" />
