--- a/views/form.hbs
+++ b/views/form.hbs
@@ -58,7 +58,7 @@
       <!-- Toppings Love -->
       <!-- This needs to be reorganized majorly, by type of topping -->
       <h3>Toppings</h3>
-      <p>Tell us about the toppings you love and hate!</p>
+      <p>Tell us about the toppings you love!</p>
       <div class="toppings-love row">
         <div class="control-group">
           <label class="control-label group-title" for="checkboxes">Loves</label>
@@ -75,17 +75,17 @@
         </div>
       </div>
 
-      <!-- Toppings Hate -->
-      <!-- Predictive text tokens based on the same above inputs -->
-      <div class="toppings-hate row">
-        <div class="control-group">
-          <label class="control-label group-title" for="hates">Hates</label>
-          <div class="controls">
-            <input id="hates" name="hates" type="text" placeholder="" class="input-xlarge">
-            <p class="help-block">Which toppings will you not eat, no matter what?</p>
-          </div>
-        </div>
-      </div>
+      <!-- [> Toppings Hate <] -->
+      <!-- [> Predictive text tokens based on the same above inputs <] -->
+      <!-- <div class="toppings-hate row"> -->
+        <!-- <div class="control-group"> -->
+          <!-- <label class="control-label group-title" for="hates">Hates</label> -->
+          <!-- <div class="controls"> -->
+            <!-- <input id="hates" name="hates" type="text" placeholder="" class="input-xlarge"> -->
+            <!-- <p class="help-block">Which toppings will you not eat, no matter what?</p> -->
+          <!-- </div> -->
+        <!-- </div> -->
+      <!-- </div> -->
 
       <!-- Crust preferences -->
       <!-- Multiple Radios (inline) -->
