--- a/views/layouts/home.hbs
+++ b/views/layouts/home.hbs
@@ -47,7 +47,10 @@
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
               <li><a href="/login">Login</a></li>
+              <li><a href="/about">About</a></li>
+             {{!--  <li><a href="/contact">Contact</a></li> --}}
               <li><a href="http://twitter.com/pizzafy"><span class="fui-twitter"></span></a></li>
+              <li><a href="http://pizzafy.tumblr.com"><span class="fui-tumblr"></span></a></li>
             </ul>
           </div>
         </div>
