--- a/views/layouts/profile.hbs
+++ b/views/layouts/profile.hbs
@@ -46,10 +46,9 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <!--<li><a href="#">My Pizza Profile</a></li> -->
-            <!-- <li><a href="#">Settings</a></li>-->
-            <!-- Need modal here -->
-            <!--<li><a href="#" data-toggle="modal" data-target="#myModal">About</a></li> -->
+            {{!-- <li><a href="/profile">My Pizza Profile</a></li>
+             <li><a href="/about">About</a></li>
+             <li><a href="/contact">Contact</a></li> --}}
             <li><a href="/logout">Log Out</a></li>
           </ul>
         </div>
