Team bios added

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -4,5 +4,21 @@
 
 <p>Pizzafy solves this problem. Your guests enter in their pizza preferences once, and the app recommends exactly the right amount of pizza to serve at your party. Even better, Pizzafy uses a sophisticated algorithm to determine what toppings will make your guests happy.</p>
 
-<p>Pizzafy was developed on a bus. Its team met as part of the 2015 Startup Bus hackathon and they created the app en route from NYC to Nashville. For more information, contact <a href="mailto:talk@pizzafy.me">talk@pizzafy.me</a>.</p>
+<p>Pizzafy was developed on a bus. Its team met as part of the 2015 Startup Bus hackathon and they created the app en route from NYC to Nashville.
+
+<h3>Our Team</h3>
+<p>Meredith Broussard is a writer in Philadelphia<br/>
+<a href="http://twitter.com/merbroussard" target="_blank">Twitter</a>
+</p>
+<p>Eddie Zaneski is a developer evangelist at SendGrid<br/>
+<a href="http://twitter.com/eddiezane" target="_blank">Twitter</a> &bull; <a href="http://doesnotscale.com" target="_blank">Website</a>
+</p>
+<p>Emma Pinkerton is a strategy consultant and user experience researcher<br/>
+<a href="http://twitter.com/empinkerton" target="_blank">Twitter</a> &bull; <a href="https://www.linkedin.com/pub/emma-pinkerton-cua/15/5b/b96" target="_blank">Linkedin</a>
+</p>
+<p>Alicia Hurst is a freelance web designer and front-end developer <br/>
+<a href="http://twitter.com/aliciainthecity" target="_blank">Twitter</a>&bull; <a href="http://aliciahurst.com" target="_blank">Website</a>
+</p>
+<h3>Contact</h3> 
+<p>For more information, contact <a href="mailto:talk@pizzafy.me">talk@pizzafy.me</a></p>
 </div>
