Switch out for png

--- a/views/layouts/home.hbs
+++ b/views/layouts/home.hbs
@@ -42,7 +42,7 @@
               <span class="icon-bar"></span>
             </button>
             <!-- need to replace logo here -->
-            <a class="navbar-brand" href="/"><img src="/images/pizzafylogo-white.svg" alt="Pizzafy.me"/ ><h1>Pizzafy</h1></a>
+            <a class="navbar-brand" href="/"><img src="/images/pizzafylogo-white.png" alt="Pizzafy.me"/ ><h1>Pizzafy</h1></a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
