--- a/public/css/custom-home.css
+++ b/public/css/custom-home.css
@@ -70,7 +70,7 @@ h4 {
 
 .login-form {
 	width: 60%;
-	margin: 4rem auto 0;
+	margin: 0 auto;
 }
 
 .btn-block+.btn-block {
@@ -91,6 +91,12 @@ h4 {
 #startupbus_banner {
   background: white;
   text-align: center;
+  padding: 6% 0;
+}
+
+#startupbus_banner img {
+	height: auto;
+	width: 100%;
 }
 
 @media (max-width:1080px) {
@@ -153,4 +159,12 @@ h4 {
 
 .navbar-brand {
 	padding: 10px 15px;
+}
+
+h6 {
+	text-align: center;
+}
+
+h4 {
+	margin-bottom: 4rem;
 }
