--- a/views/form.hbs
+++ b/views/form.hbs
@@ -107,7 +107,7 @@
 
       <!-- Dietary restrictions -->
       <h3>Dietary Restrictions</h3>
-      <p>Got dietary restrictions? We got you covered!</p>
+      <p>Got dietary restrictions? Tell us about them:</p>
       <div class="dietary row">
         <div class="control-group">
           <div class="controls">
@@ -125,7 +125,7 @@
 
       <!-- Notes -->
       <h3>Notes</h3>
-      <p>Do you have any additional comments about your pizza preferences that you would want the organizer of any party to attend to know? Allergies? Requests? Something we didn't cover here?</p>
+      <p>Do you have any additional comments for a party host?</p>
       <div class="notes row">
         <div class="control-group">
           <label class="control-label" for="notes"></label>
