--- a/views/layouts/profile.hbs
+++ b/views/layouts/profile.hbs
@@ -42,13 +42,15 @@
             <span class="icon-bar"></span>
           </button>
           <!-- need to replace logo here -->
-          <a class="navbar-brand" href="#"><img src="/images/pizzafylogo-red.png" alt="Pizzafy.me"/ ><h1>Pizzafy</h1></a>
+          <a class="navbar-brand" href="/profile"><img src="/images/pizzafylogo-red.png" alt="Pizzafy.me"/ ><h1>Pizzafy</h1></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             {{!-- <li><a href="/profile">My Pizza Profile</a></li>
              <li><a href="/about">About</a></li>
              <li><a href="/contact">Contact</a></li> --}}
+            <li><a href="/profile/events/new" id="createEvent">Create Event</a></li>
+            <li><a href="/profile/events" id="viewEvents">View Events</a></li>
             <li><a href="/logout">Log Out</a></li>
           </ul>
         </div>
