--- a/views/profile/form.hbs
+++ b/views/profile/form.hbs
@@ -3,7 +3,7 @@
 
   <div class="row page-header">
     <img src="{{user.profile.picture}}" class="profile-pic" alt="{{user.profile.displayName}} | Pizzafy" />  
-    <h1 class="page-title">{{#if user.profile.firstName}}{{user.profile.firstName}}{{else}}Your{{/if}}'s Pizza Profile</h1> 
+    <h1 class="page-title">{{#if user.profile.firstName}}{{user.profile.firstName}}'s{{else}}My{{/if}} Pizza Profile</h1> 
     <!-- Not using this for now <button type="button" class="badge pizza-number" data-toggle="tooltip" data-placement="top" title="Your Pizza Number: How many slices of pizza you eat">2</button> -->
   </div>
 
