--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,3 +1,4 @@
+{{> flash}}
 <div class="login-form">
   <!-- <a href="/auth/twitter" class="btn btn-block btn-lg btn-info">Join With Twitter</a> -->
 
@@ -19,7 +20,7 @@
 
       <input type="hidden" name="_csrf" value={{_csrf}}>
 
-      <button type="submit" id="submit" name="submit" class="btn btn-block btn-lg btn-inverse">Log in</button>
+      <button type="submit" id="submit" class="btn btn-block btn-lg btn-inverse">Log in</button>
     </form>
   </div>
 </div>
