--- a/views/layouts/profile.hbs
+++ b/views/layouts/profile.hbs
@@ -76,7 +76,7 @@
 
     {{{body}}}
 
-    <!-- EDDIE!!! getting to 404s on the scripts below because I haven't downloaded them arghhh -->
+    <!-- getting to 404s on the scripts below because I haven't downloaded them arghhh -->
     <!-- Bootstrap core JavaScript
       ================================================== -->
       <!-- Placed at the end of the document so the pages load faster -->
@@ -92,8 +92,8 @@
           $(':radio').radiocheck();
         })
       </script>
-      <script src="/js/application.js"></script>
 
+      <script src="/js/application.js"></script>
       <div id="startupbus_banner" data-company-id="55708ced144feed32e482e16" style="display: none;"></div>
       <script src="http://game.startupbus.com/js/widget.js"></script>
       <script>
