--- a/views/layouts/profile.hbs
+++ b/views/layouts/profile.hbs
@@ -46,8 +46,8 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            {{!-- <li><a href="/profile">My Pizza Profile</a></li>
-             <li><a href="/about">About</a></li>
+            <li><a href="/profile">Pizza Profile</a></li>
+          {{!--    <li><a href="/about">About</a></li>
              <li><a href="/contact">Contact</a></li> --}}
             <li><a href="/profile/events/new" id="createEvent">Create Event</a></li>
             <li><a href="/profile/events" id="viewEvents">View Events</a></li>
