--- a/views/partials/recommendation.hbs
+++ b/views/partials/recommendation.hbs
@@ -26,7 +26,7 @@
 					<h3>x<span class="pizza-count">1</span></h3>
 					<span class="label label-info">spinach + olives</span>
 					<p></p>
-					<span class="label label-empty">none</span>
+					<span class="label label-empty">none none none</span>
 					<p><strong>regular crust</strong></p>
 					<p><strong>vegan</strong></p>
 				</div>
@@ -40,7 +40,7 @@
 				<div class="caption">
 					<h3>x<span class="pizza-count">1</span></h3>
 					<span class="label label-info">pepperoni + mushrooms</span>
-					<span class="label label-empty">none</span>
+					<span class="label label-empty">none none none</span>
 					<p></p>
 					<p><strong>deep dish crust</strong></p>
 					<p class="diet-empty"><strong>empty</strong></p>
